--- a/exercise/index.html
+++ b/exercise/index.html
@@ -12,7 +12,7 @@
             <div class="learn-link" onclick="
                 document.location.href = '../../learn';
             ">
-                <img src="../../learn/assets/images/book-logo.svg" class="learn-logo">
+                <img src="../learn/assets/images/book-logo.svg" class="learn-logo">
             </div>
             <h1>Đề thi thử tuyển sinh vào lớp 10 THPT</h1>
         </div>
