--- a/exercise/index.html
+++ b/exercise/index.html
@@ -10,7 +10,7 @@
     <div class="screen">
         <div class="top-section">
             <div class="learn-link" onclick="
-                document.location.href = '../../learn';
+                document.location.href = '../learn';
             ">
                 <img src="../learn/assets/images/book-logo.svg" class="learn-logo">
             </div>
