--- a/exercise/index.html
+++ b/exercise/index.html
@@ -43,8 +43,16 @@
             <button class="cta-button" onclick="submitData()">
                 Tôi đã hiểu và đồng ý</button>
         </div>
+
+        <div class="history-exam">
+            <h1>Lịch sử làm bài</h1>
+            <div class="storage-exams">
+                
+            </div>
+        </div>
     </div>
     
     <script src="main.js"></script>
 </body>
 </html>
+
