--- a/learn/index.html
+++ b/learn/index.html
@@ -25,6 +25,18 @@
                 <img src="assets/images/exercise-logo.svg" class="exercise-logo">
                 <span class="logo-title">Làm đề thi</span>
             </div>
+            <div class="link-link" onclick="
+                document.location.href = '../link';
+            ">
+                <img src="assets/images/link-logo.svg" class="link-logo">
+                <span class="logo-title">Tham khảo</span>
+            </div>
+            <div class="download-link" onclick="
+                document.location.href = '../download';
+            ">
+                <img src="assets/images/download-logo.svg" class="download-logo">
+                <span class="logo-title">Tải app điện thoại</span>
+            </div>
         </nav>
 
         <div class="mid-section">
